# gmail-file-system

./: CMakeLists.txt  Makefile  README.md  README.txt  config.txt  configure.c  configure.h  fs.c  fs.h  logger.h  main.c
tests/: test_config.txt  tester.c
